# bochat-rss-subscriber

./: .gitignore  README.md  TEST_REPORT.md  pyproject.toml
bochat_rss/: __init__.py  cli.py  config.py  rss.py  runner.py  sender.py  state.py
examples/: config.toml
tests/: test_config.py  test_integration.py  test_rss.py  test_runner.py  test_sender.py  test_state.py  test_supplementary.py
