[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bochat-rss-subscriber"
version = "0.1.0"
description = "RSS/Atom subscriber bot for BoChat"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BoChat Community" }]
dependencies = [
  "bochat-sdk==0.1.0",
  "feedparser>=6.0,<7",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
bochat-rss = "bochat_rss.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bochat_rss"]
